# qa-agent

./: .gitignore  CONTEXT_GL_CONVERSION.md  Makefile  QUICKSTART.md  README.md  fix_final.py  fix_scenario_schema.py  fix_schema.py  pyproject.toml
app/: handler.py  logging.py  logging.yaml  main.py
app/api/: __init__.py
app/api/general/: __init__.py  health.py  ping.py
app/config/: __init__.py  app.py
app/test/: test_ping.py
deploy/: Dockerfile
docs/: claude-code-setup.md  html-report-guide.md  utterance-extraction-guide.md  파트타이머-가이드.md
prompts/: generate_client_report.md  generate_scenarios.md  generate_scenarios_v2.md  mock_data_belier.json  normalize_sop.md  persona_archetypes.md
scripts/: normalize_phase1.py  test_html_report.py
skills/qa-agent/: SKILL.md
tools/: chat_driver.py  cli.py  extract_user_utterances.py  integrated_report_generator.py  llm_client.py  report_html_generator.py  result_store.py  scenario_runner.py  scoring_agent.py  success_criteria_templates.py
