[project]
name = "python-boilerplate"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "pydantic-settings>=2.7.1",
    "python-json-logger>=3.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
]
ops = [
    "ddtrace>=2.18.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]
